Tests completed, delete user method added, locale added

--- a/web/src/main/resources/locale_us.properties
+++ b/web/src/main/resources/locale_us.properties
@@ -23,6 +23,7 @@ main.welcomemessage = Welcome,
 main.youhaveloggedin = You've just logged in as admin
 main.showcoursesbutton = Show all courses
 main.addnewcourse = Add a new course
+main.showusers = Show all users registered
 main.logout = Logout
 addcourse.title = Adding a new course
 addcourse.entercoursename = Enter course name:
@@ -38,6 +39,10 @@ courseadded.price = price:
 courseadded.added = was successfully added to our menu!
 courseadded.newmenu = Click here to see the renewed menu:
 courseadded.showcoursesbutton = Show all courses
-
-
-
+deleteuser.title = List of users registered
+deleteuser.enterusername = Wish to delete user from database? Enter username:
+deleteuser.enterpassword = Enter password:
+deleteuser.usernameplaceholder = Username
+deleteuser.userpasswordplaceholder = Password
+deleteuser.deletebutton = Delete
+deleteuser.userdeleted = User was successfully deleted
