--- a/web/src/main/resources/locale_ru.properties
+++ b/web/src/main/resources/locale_ru.properties
@@ -45,4 +45,5 @@ deleteuser.enterpassword = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043f\u04
 deleteuser.usernameplaceholder = \u0418\u043c\u044f \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f
 deleteuser.userpasswordplaceholder = \u041f\u0430\u0440\u043e\u043b\u044c
 deleteuser.deletebutton = \u0423\u0434\u0430\u043b\u0438\u0442\u044c
+deleteuser.userdeleted = \u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c \u0431\u044b\u043b \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u0443\u0434\u0430\u043b\u0435\u043d
 
