DB script runs on startup, bugs fixed

--- a/web/src/main/resources/locale_en.properties
+++ b/web/src/main/resources/locale_en.properties
@@ -1,26 +1,36 @@
+login.signin = Sign in
 login.title = Welcome to our restaurant!
-login.login = Login:
-login.pass = Password:
+login.login = Login
+login.pass = Password
 login.loginplaceholder = Your login
 login.passwordplaceholder = Your password
 login.loginbutton = Log in
 login.loginnewaccount = Don't have the account yet?
 login.registerbutton = Register now
+login.error = Invalid username or password
+login.logout = You have successfully logged out
 register.title = Registration
 register.nouser = There is no user registered under that name. Please sign up here
 register.login = Enter your login:
 register.pass = Enter your password:
 register.loginplaceholder = Login
 register.passwordplaceholder = Password
-register.loginbutton = Register
+register.registerbutton = Register
+home.pizza = Pizza
+home.drinks = Drinks
+home.dessert = Dessert
+home.soup = Soup
+home.other = Other
+user.home = Home
+user.language = Language
 user.title = Welcome user!
 user.welcomemessage = Welcome,
 user.youhaveloggedin = You've just logged in as user
 user.showcoursesbutton = Show all courses
 user.logout = Logout
 main.title = Welcome admin!
-main.welcomemessage = Welcome,
-main.youhaveloggedin = You've just logged in as admin
+main.welcomemessage = Welcome
+main.youhaveloggedin = You've logged in as administrator
 main.showcoursesbutton = Show all courses
 main.addnewcourse = Add a new course
 main.showusers = Show all users registered
