--- a/web/src/main/resources/locale_ru.properties
+++ b/web/src/main/resources/locale_ru.properties
@@ -1,26 +1,36 @@
 login.title = \u0414\u043e\u0431\u0440\u043e \u043f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c \u0432 \u043d\u0430\u0448 \u0440\u0435\u0441\u0442\u043e\u0440\u0430\u043d\u0021
-login.login = \u041b\u043e\u0433\u0438\u043d\u003a
-login.pass = \u041f\u0430\u0440\u043e\u043b\u044c\u003a
+login.signin = Войти
+login.login = Логин
+login.pass = Пароль
 login.loginplaceholder = \u0412\u0430\u0448 \u043b\u043e\u0433\u0438\u043d
 login.passwordplaceholder = \u0412\u0430\u0448 \u043f\u0430\u0440\u043e\u043b\u044c
 login.loginbutton = \u0412\u043e\u0439\u0442\u0438
 login.loginnewaccount = \u041d\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u043d\u044b\u003f
 login.registerbutton = \u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c\u0441\u044f
+login.error = Неверное имя или пароль
+login.logout = Вы успешно вышли из своего аккаунта
 register.title = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044f
 register.nouser = \u0422\u0430\u043a\u043e\u0439 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u0443\u0439\u0442\u0435\u0441\u044c\u002e
 register.login = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043b\u043e\u0433\u0438\u043d\u003a
 register.pass = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043f\u0430\u0440\u043e\u043b\u044c\u003a
 register.loginplaceholder = \u041b\u043e\u0433\u0438\u043d
 register.passwordplaceholder = \u041f\u0430\u0440\u043e\u043b\u044c
-register.loginbutton = \u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c\u0441\u044f
+register.registerbutton = \u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c\u0441\u044f
+home.pizza = Пицца
+home.drinks = Напитки
+home.dessert = Дессерты
+home.soup = Супы
+home.other = Другое
+user.home = Домой
+user.language = Язык
 user.title = \u0414\u043e\u0431\u0440\u043e \u043f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c\u0021
 user.welcomemessage = \u0414\u043e\u0431\u0440\u043e \u043f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c\u002c
 user.youhaveloggedin = \u0412\u044b \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u0437\u0430\u0448\u043b\u0438 \u043a\u0430\u043a \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c
 user.showcoursesbutton = \u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c \u043c\u0435\u043d\u044e
 user.logout = \u0412\u044b\u0439\u0442\u0438
 main.title = \u0414\u043e\u0431\u0440\u043e \u043f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c\u002c \u0430\u0434\u043c\u0438\u043d\u0021
-main.welcomemessage = \u0414\u043e\u0431\u0440\u043e \u043f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c\u002c
-main.youhaveloggedin = \u0412\u044b \u0437\u0430\u0448\u043b\u0438 \u043a\u0430\u043a \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440
+main.welcomemessage = Добро пожаловать!
+main.youhaveloggedin = Вы зашли как администратор
 main.showcoursesbutton = \u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c \u043c\u0435\u043d\u044e
 main.addnewcourse = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u043d\u043e\u0432\u043e\u0435 \u0431\u043b\u044e\u0434\u043e
 main.logout = \u0412\u044b\u0439\u0442\u0438
