Error page added

--- a/web/src/main/resources/locale_en.properties
+++ b/web/src/main/resources/locale_en.properties
@@ -56,3 +56,8 @@ deleteuser.usernameplaceholder = Username
 deleteuser.userpasswordplaceholder = Password
 deleteuser.deletebutton = Delete
 deleteuser.userdeleted = User was successfully deleted
+errors.401=Http Error Code: 401. Unauthorized
+errors.400=Http Error Code: 400. Bad Request
+errors.403=Http Error Code: 403. Access denied
+errors.404=Http Error Code: 404. Resource not found
+errors.500=Http Error Code: 500. Internal Server Error
