Bugs fixed. All courses menu added

--- a/web/src/main/resources/locale_en.properties
+++ b/web/src/main/resources/locale_en.properties
@@ -61,3 +61,4 @@ errors.400=Http Error Code: 400. Bad Request
 errors.403=Http Error Code: 403. Access denied
 errors.404=Http Error Code: 404. Resource not found
 errors.500=Http Error Code: 500. Internal Server Error
+course.title = Choose your meal
