--- a/web/src/main/resources/locale_ru.properties
+++ b/web/src/main/resources/locale_ru.properties
@@ -1,4 +1,4 @@
-login.title = \u0414\u043e\u0431\u0440\u043e \u043f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c \u0432 \u043d\u0430\u0448 \u0440\u0435\u0441\u0442\u043e\u0440\u0430\u043d\u0021
+login.title = Добро пожаловать в наш ресторан!
 login.signin = Войти
 login.login = Логин
 login.pass = Пароль
@@ -61,4 +61,4 @@ errors.400=Http Error Code: 400. \u041D\u0435\u0432\u0435\u0440\u043D\u044B\u043
 errors.403=Http Error Code: 403. \u041E\u0442\u043A\u0430\u0437\u0430\u043D\u043E \u0432 \u0434\u043E\u0441\u0442\u0443\u043F\u0435
 errors.404=Http Error Code: 404. \u0420\u0435\u0441\u0443\u0440\u0441 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D
 errors.500=Http Error Code: 500. \u0412\u043D\u0443\u0442\u0440\u0435\u043D\u043D\u044F\u044F \u043E\u0448\u0438\u0431\u043A\u0430 \u0441\u0435\u0440\u0432\u0435\u0440\u0430
-
+course.title = Выберите еду на ваш вкус
